--- a/UnityDemo/UnityDemo.csproj
+++ b/UnityDemo/UnityDemo.csproj
@@ -58,11 +58,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Battery.cs" />
+    <Compile Include="CheapSpeaker.cs" />
     <Compile Include="ContainerMagic.cs" />
     <Compile Include="Dial.cs" />
     <Compile Include="IBattery.cs" />
     <Compile Include="IRadio.cs" />
+    <Compile Include="ISpeaker.cs" />
     <Compile Include="ITuner.cs" />
+    <Compile Include="PriceySpeaker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radio.cs" />
